# HSCodeSearch

./: .gitignore  MCP_Readme.md  README.md  env.example  pyproject.toml  server.py
DeepHSCode/KGs/: KGs.py  __init__.py  rag_module.py  test_knowledge_bases.py  test_notebook.ipynb
DeepHSCode/agents/: base_agent.py
DeepHSCode/agents/SmartHSCode/: CLAUDE.md  __init__.py  agent.py  hscode_pipeline.py  my_doc.md  requirements.txt
DeepHSCode/agents/SmartHSCode/prompts/en/: HSCode.yaml
DeepHSCode/agents/SmartHSCode/prompts/zh/: HSCode.yaml
DeepHSCode/agents/SmartHSCode/skills/act/: SKILL.md
DeepHSCode/agents/SmartHSCode/skills/learn/: SKILL.md
DeepHSCode/agents/SmartHSCode/skills/observe/: SKILL.md
DeepHSCode/agents/SmartHSCode/skills/plan/: SKILL.md
DeepHSCode/agents/SmartHSCode/skills/summary/: SKILL.md
DeepHSCode/agents/SmartHSCode/subagents/: __init__.py  act_agent.py  learn_agent.py  observe_agent.py  plan_agent.py
DeepHSCode/agents/hscode_orchestrator/: SKILL.md  pipeline_agent.py  stages_loader.py
DeepHSCode/agents/hscode_orchestrator/references/: examples.md
DeepHSCode/agents/hscode_orchestrator/stages/INITIAL/: hscode_discovery.md  hscode_matching.md  plan.md  product_element_discovery.md  review.md  stage.md
DeepHSCode/agents/hscode_orchestrator/step/HSCodeDiscovery/: script.py  test_rag_tool.py
DeepHSCode/agents/hscode_orchestrator/step/HSCodeProductMatching/: script.py
DeepHSCode/agents/hscode_orchestrator/step/Plan/: script.py
DeepHSCode/agents/hscode_orchestrator/step/ProductElementDiscovery/: script.py
DeepHSCode/agents/hscode_orchestrator/step/Review/: script.py
DeepHSCode/agents/hscode_orchestrator/tools/: __init__.py  tool_registry.py
DeepHSCode/agents/hscode_orchestrator/tools/LLM/: __init__.py  openai_llm.py
DeepHSCode/api/: README.md  main.py  main_api_test.ipynb  run_server.py
DeepHSCode/api/routers/: __init__.py  hscode.py  knowledge.py
DeepHSCode/api/utils/: log_interceptor.py  progress_broadcaster.py  task_log_stream.py
DeepHSCode/core/: errors.py
DeepHSCode/knowledge/: add_documents.py  initializer.py  manager.py  progress_tracker.py
DeepHSCode/logging/: __init__.py  config.py  logger.py
DeepHSCode/logging/adapters/: llamaindex.py
DeepHSCode/logging/handlers/: file.py  websocket.py
DeepHSCode/logging/stats/: llm_stats.py
DeepHSCode/runtime/: mode.py  orchestrator.py
DeepHSCode/runtime/bootstrap/: builtin_capabilities.py
DeepHSCode/runtime/registry/: capability_registry.py  tool_registry.py
DeepHSCode/services/: provider_registry.py
DeepHSCode/services/config/: __init__.py  knowledge_base_config.py  loader.py  model_catalog.py  provider_runtime.py
DeepHSCode/services/embedding/: __init__.py  client.py  config.py
DeepHSCode/services/llm/: config.py
DeepHSCode/services/prompt/: manager.py
DeepHSCode/services/rag/: pipeline.py  service.py
DeepHSCode/services/rag/components/: base.py  routing.py
DeepHSCode/services/rag/components/embedders/: openai.py
DeepHSCode/services/rag/components/retrievers/: dense.py
DeepHSCode/services/rag/pipelines/: __init__.py  llamaindex.py
DeepHSCode/tools/: __init__.py  brainstorm.py  code_executor.py  rag_tool.py  reason.py  web_search.py
DeepHSCode/tools/builtin/: __init__.py
DeepHSCode/tools/vision/: __init__.py
cli/: rag_kb.py  rag_kbv2.py  smart_hscode.py  web_search.py
data/user/settings/: main.yaml
mcp/server/: RUN_MCP_SERVER.md  server.py
mcp/server/search/: __init__.py  base.py  consolidation.py  providers_playground.ipynb  types.py
mcp/server/search/providers/: __init__.py  baidu.py  duckduckgo.py  exa.py  jina.py  openrouter.py  perplexity.py  serper.py  tavily.py  webcrawler.py
mcp/server/tools/: PPLX_SearchAgent.py  web_search.py  web_search_test.ipynb
modules/JS/: README.md  __init__.py  web_crawler.py
modules/lightrag/: __init__.py  rag_module.py  test_notebook.ipynb
test/: test_api_hscode.py  test_lightrag_module.py  test_smart_hscode_agent.py
test/tools/: test_webcrawler.py
test/tools/search/: conftest.py  test_web_search.py
web/: package-lock.json  package.json  playwright.config.ts
web/.next/dev/: lock  prerender-manifest.json  trace
web/.next/dev/cache/: .rscinfo
web/.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
web/.next/dev/static/chunks/: 0_lp_modules_mermaid_dist_chunks_mermaid_core_classDiagram-v2-HSJHXN6E_mjs_0.kbgc~._.js  0_lp_modules_mermaid_dist_chunks_mermaid_core_classDiagram-v2-HSJHXN6E_mjs_07jn51d._.js  0_lp_modules_mermaid_dist_chunks_mermaid_core_classDiagram-v2-HSJHXN6E_mjs_08ql847._.js  0_lp_modules_mermaid_dist_chunks_mermaid_core_classDiagram-v2-HSJHXN6E_mjs_0k_itww._.js  (+1084 more)
web/.next/dev/types/: routes.d.ts  validator.ts
web/app/(utility)/settings/: page.tsx
web/app/(workspace)/co-writer/: page.tsx  sampleTemplate.ts
web/app/(workspace)/hscode-finder/: page.tsx
web/components/: ThemeScript.tsx
web/components/sidebar/: SidebarShell.tsx
web/context/: AppShellContext.tsx
web/tests/e2e/: compliance-and-ux.audit.ts
(+195 files in other folders)
