[project]
name = "hscodesearch-mcp"
version = "0.1.0"
description = "MCP server for HS code search project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.6.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
