[project]
name = "hscodesearch-mcp"
version = "0.1.0"
description = "MCP server for HS code search project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.6.0",
  "httpx>=0.28.1",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "playwright>=1.58.0",
  # web-search providers
  "jinja2>=3.1.0",
  "duckduckgo-search>=6.0.0",
  "perplexityai>=0.32.0",
  "typer>=0.24.1",
  "pip>=26.0.1",
  "pyyaml>=6.0.3",
  "uvicorn>=0.44.0",
  "fastapi>=0.135.3",
  "llama-index-core>=0.14.20",
  "llama-index>=0.14.20",
  # Below is related to opnetelemetry
  "opentelemetry-sdk",
  "opentelemetry-api",
  # OTLP exporter (sends to the Collector)
  "opentelemetry-exporter-otlp-proto-grpc",
  # Auto-instrumentation (picks up requests, httpx, sqlalchemy, etc.)
  "opentelemetry-instrumentation",
  "opentelemetry-instrumentation-requests==0.62b0",
  "opentelemetry-instrumentation-httpx==0.62b0",       # if you use httpx
  "opentelemetry-instrumentation-fastapi==0.62b0",      # if you use FastAPI
  "opentelemetry-instrumentation-sqlalchemy==0.62b0",   # if you use SQLAlchemy
  # Logging bridge (forwards Python logs as OTel log records)
  "opentelemetry-sdk",        # already included
  "opentelemetry-instrumentation-asyncio==0.62b0",
  "opentelemetry-instrumentation-dbapi==0.62b0",
  "opentelemetry-instrumentation-logging==0.62b0",
  "opentelemetry-instrumentation-sqlite3==0.62b0",
  "opentelemetry-instrumentation-threading==0.62b0",
  "opentelemetry-instrumentation-urllib==0.62b0",
  "opentelemetry-instrumentation-wsgi==0.62b0",
  "opentelemetry-instrumentation-openai-v2>=2.3b0",
  "opentelemetry-instrumentation-aiohttp-client==0.62b0",
  "opentelemetry-instrumentation-aiohttp-server==0.62b0",
  "opentelemetry-instrumentation-asgi==0.62b0",
  "opentelemetry-instrumentation-click==0.62b0",
  "opentelemetry-instrumentation-grpc==0.62b0",
  "opentelemetry-instrumentation-jinja2==0.62b0",
  "opentelemetry-instrumentation-starlette==0.62b0",
  "opentelemetry-instrumentation-system-metrics==0.62b0",
  "opentelemetry-instrumentation-tornado==0.62b0",
  "opentelemetry-instrumentation-tortoiseorm==0.62b0",
  "opentelemetry-instrumentation-urllib3==0.62b0",
  "loguru>=0.7.3",
]

[project.optional-dependencies]
# Install the providers you need:
#   uv pip install ".[brave]"       → Brave Search
#   uv pip install ".[tavily]"      → Tavily AI Search
#   uv pip install ".[perplexity]"  → Perplexity AI (sonar)
brave      = []   # only needs BRAVE_API_KEY; httpx already required
tavily     = ["tavily-python>=0.5.0"]
perplexity = ["perplexityai>=0.1.0"]
serper     = []   # only needs SERPER_API_KEY; httpx already required
jina       = []   # only needs JINA_API_KEY; httpx already required
searxng    = []   # self-hosted; no extra package needed

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DeepHSCode", "mcp"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]
